2008-06-17  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* dllwrapper1/wine/Makefile.am:
	* src/Makefile.am:
	  Different workaround for Bug #1981932.

2008-06-17  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/Makefile.am:
	* src/Makefile.am:
	  Workaround for Bug #1981932.

2008-06-15  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  Rebuild.

	* src/dsplib/dsplib.cpp:
	* src/dsplib/dsplib.sln:
	* src/dsplib/dsplib.vcproj:
	  Add projects files and tweak the build.

2008-06-13  Stefan Kost  <ensonic@users.sf.net>

	* src/dsplib/Makefile:
	* src/dsplib/dsplib.cpp:
	  Adding dsplib rewrite donated by zubb.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/module.c:
	  Comment out unused function.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* src/Makefile.am:
	  Fix _LIBS var with wrong name.

2008-05-28  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Valgrind fixes.

2008-05-13  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  New version that calls host callbacks.

2008-05-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/dsplib.h:
	  Crosscompilation fixes.

2008-05-11  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/CSong.h:
	* src/BuzzMachineLoader/Makefile.am:
	* src/BuzzMachineLoader/dsplib.h:
	* src/bml.c:
	* src/bml.h:
	  Call host callback if its available.

2008-05-08  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  Some info about cross compilations attempts.

	* TODO:
	  Update issue list.
  
	* dllwrapper1/wine/module.c: